--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,10 @@
 {
   "manifest_version": 3,
-  "name": "My Redirect Blocker",
-  "version": "1.0",
-  "description": "特定のサイトをブロックして、指定したURLへ飛ばします。",
-  "permissions": [
-    "storage",
-    "tabs"
-  ],
-  "host_permissions": [
-    "<all_urls>"
-  ],
+  "name": "website-blocker",
+  "version": "1.1",
+  "description": "Website Blocker: 特定のサイトをブロックして、指定したURLへ飛ばします。",
+  "permissions": ["storage", "tabs"],
+  "host_permissions": ["<all_urls>"],
   "background": {
     "service_worker": "background.js"
   },
